<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="Add_Personal_Detail">Add Personal Detail</string>
    <string name="Write_Test">Write Test</string>
    <string name="Login">Login</string>
    <string name="View_Results">View Results</string>

    <string name="yob">Year Of Birth</string>
    <string name="occu">Occupation</string>
    <string name="town">Town</string>

    <string name="totalMark">Total Mark</string>
    <string name="obtainedMark">Obtained mark</string>
    <string name="percentage">Percentage</string>
    <string name="status">Status</string>
    <string name="update">Update</string>



    <string name="app_name">Mobile Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="View_Contact">View Contact</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">Country</string>
    <string name="postalCode">Postal Code</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_personal_detail">PersonalDetailActivity</string>


</resources>