<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PersonalDetailActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblyob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtYob"
            android:layout_alignLeft="@+id/lblName"
            android:text="@string/yob"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtYob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblyob"
            android:layout_below="@+id/txtName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="120dp"
            android:ems="10"
            android:inputType="text" />


        <TextView
            android:id="@+id/lblStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtStreet"
            android:layout_alignLeft="@+id/lblyob"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblyob"
            android:layout_below="@+id/lblyob"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtTown"
            android:layout_alignLeft="@+id/lblyob"
            android:text="@string/town"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblStreet"
            android:layout_below="@+id/lblStreet"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="82dp"
            android:width="7in"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtCountry"
            android:layout_alignLeft="@+id/lblTown"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTown"
            android:layout_below="@+id/lblTown"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="120dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtPostalCode"
            android:layout_alignLeft="@+id/lblCountry"
            android:text="@string/postalCode"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblCountry"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="120dp"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/txtPostalCode"
            android:layout_marginLeft="130dp"
            android:onClick="saveContact"
            android:text="@string/save"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateContact"
            android:text="@string/update"
            android:layout_below="@+id/btnDelete"
            android:layout_marginLeft="130dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteContact"
            android:text="@string/delete"
            android:layout_marginLeft="130dp"
            android:layout_alignBottom="@+id/btnSave"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>