<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.test.ViewResultsActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="82dp"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtName"
        android:layout_alignParentLeft="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtTotalMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtName"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblTotalMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTotalMark"
        android:layout_alignParentLeft="true"
        android:text="@string/totalMark"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtObtainedMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTotalMark"
        android:layout_below="@+id/txtTotalMark"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/lblObtainedMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtObtainedMark"
        android:layout_alignParentLeft="true"
        android:text="@string/obtainedMark"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtObtainedMark"
        android:layout_below="@+id/txtObtainedMark"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtPercentage"
        android:layout_alignParentLeft="true"
        android:text="@string/percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPercentage"
        android:layout_below="@+id/txtPercentage"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtStatus"
        android:layout_alignParentLeft="true"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>
